# perfect

./: .gitignore  Cargo.toml  README.md  config.sh  smt.sh
.cargo/: config
perfect/: Cargo.toml
perfect-tremont/: Cargo.toml
perfect-zen2/: Cargo.toml
perfect-zen3/: Cargo.toml
perfect-zen3/src/: lib.rs
perfect/src/: asm.rs  events.rs  experiments.rs  harness.rs  ir.rs  lib.rs  stats.rs  uarch.rs  util.rs
perfect/src/events/: tremont.rs  zen2.rs
perfect/src/experiments/: branch.rs  decoder.rs  pmcdisc.rs  template.rs
perfect/src/experiments/pmcdisc/: group.rs
perfect/src/experiments/pmcdisc/group/: fp_instr.rs  int_instr.rs
perfect/src/harness/: config.rs  input.rs  signal.rs  state.rs
perfect/src/ir/: bf.rs  branch.rs
perfect/src/uarch/: btb.rs  l1d.rs  vaddr.rs
perfect/src/util/: maps.rs  msr.rs  pagemap.rs
scripts/: config.sh  decfg.sh  freq.sh  low-mmap.sh  nobr-pred.sh  opcache.sh  rdpmc.sh
src/: asm.rs  codegen.rs  events.rs  experiments.rs  harness.rs  ir.rs  lib.rs  util.rs  zen2.rs
src/events/: zen2.rs
src/experiments/: branch.rs
