[package]
name = "perfect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perf-event = { git = "https://github.com/eigenform/perf-event", branch = "raw-event" }
nix = "0.26.2"
dynasmrt = "*"
rand = "0.8.5"
itertools = "0.11.0"
memmap2 = "0.9.0"
bitvec = "1.0.1"
num = { version = "0.4.0", features = ["num-bigint"] }

[dependencies.iced-x86]
version = "*"


