[workspace]
resolver = "2"
members = [
	"perfect", "perfect-tremont", 
	"perfect-zen2",
]

[workspace.lints.rust]
dead_code = "allow"
unused_mut = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_labels = "allow"
unreachable_patterns = "allow"
non_camel_case_types = "allow"

